# yangify

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst  requirements.txt
docs/api/: linter.rst  model_filter.rst  parser.rst  translator.rst
docs/tutorials/: filtering.ipynb  index.rst  intro.ipynb  merging.ipynb  parsing.ipynb  translating.ipynb  tutorial_parser.py  tutorial_translator.py
docs/tutorials/data/ios/: data.json
docs/tutorials/data/ios/ntc-r1/: config.txt  lldp.txt
docs/tutorials/data/ntc-templates/: cisco_ios_show_lldp_neighbors.template
docs/tutorials/parsing-quickstart/: dev-yangify.py  ios_parsing.py  parsing-quickstart.ipynb  task1_lldp_parser.py  task2_lldp_parser.py  task3_lldp_parser.py  task4_lldp_parser.py  task5_lldp_parser.py  task6_lldp_parser.py  task7_lldp_parser.py  task8_lldp_parser.py
docs/tutorials/yang/: yang-library-data.json
docs/tutorials/yang/yang-modules/openconfig/: openconfig-interfaces.yang  (+3 more)
tests/impl/: yang-library-data.json
tests/impl/helpers/: json_helpers.py  xml_helpers.py
tests/impl/yang-modules/: napalm-if-ip.yang  openconfig-if-aggregate.yang  openconfig-vlan-types.yang  openconfig-vlan.yang
tests/integration/: test_integration.py
tests/linter/: impl.py  test_linter.py
tests/unit/: test_config_tree.py  test_model_filter.py  test_parser.py  test_translator.py
tests/unit/yang/simple/: yang-library-data.json  yangify-tests.yang
yangify/: __init__.py
yangify/linter/: __init__.py
yangify/model_filter/: __init__.py
yangify/parser/: __init__.py  text_tree.py
yangify/translator/: __init__.py  config_tree.py
(+139 files in other folders)
